force-app/main/default/objects/geopointe__Layer__c/geopointe__Layer__c.object-meta.xml
<CustomObject>
    <description>Stores information about custom layers that can be applied to the Geopointe Map.</description>
    <label>Geopointe Layer</label>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Layers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>