force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__Active__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Control if this Layer is active and can be added to map by users.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>