force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__Auto_Load__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Auto_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, automatically load this layer when the Map page is opened.</inlineHelpText>
    <label>Auto Load</label>
    <type>Checkbox</type>
</CustomField>