force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__Description__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Description__c</fullName>
    <inlineHelpText>A short description for this layer.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>