force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__File_Extension__c.field-meta.xml
<CustomField>
    <fullName>geopointe__File_Extension__c</fullName>
    <label>File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>