force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__Folder__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Folder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The folder to associate this layer with.</inlineHelpText>
    <label>Folder</label>
    <referenceTo>geopointe__GP_Folder__c</referenceTo>
    <relationshipLabel>Geopointe Layers</relationshipLabel>
    <relationshipName>Layers</relationshipName>
    <type>Lookup</type>
</CustomField>