force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__Key__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>