force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__Personal__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if the layer will only be used by you.</inlineHelpText>
    <label>Personal</label>
    <type>Checkbox</type>
</CustomField>