force-app/main/default/objects/geopointe__Layer__c/fields/geopointe__URL__c.field-meta.xml
<CustomField>
    <fullName>geopointe__URL__c</fullName>
    <inlineHelpText>URL for the KML, KMZ, or GEORSS file.</inlineHelpText>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>